[package]
name = "izanami"
description = "An HTTP server implementation powered by hyper and tower-service."
version = "0.1.0-preview.3"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ubnt-intrepid/izanami.git"
readme = "README.md"

include = [
  "/Cargo.toml",
  "/src/**/*.rs",
  "/tests/**/*.rs",
]

[dependencies]
izanami-http = { version = "0.1.0-preview.1", path = "izanami-http" }
izanami-server = { version = "0.1.0-preview.1", path = "izanami-server" }
izanami-service = { version = "0.1.0-preview.1", path = "izanami-service" }
izanami-util = { version = "0.1.0-preview.1", path = "izanami-util" }

futures = "0.1"
tokio-threadpool = "0.1"

[dev-dependencies]
failure = "0.1.3"
http = "0.1"
tokio = "0.1"
tokio-rustls = "0.9"
trust-dns-resolver = "0.10"
version-sync = "0.7"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[workspace]
members = [
  "izanami-http",
  "izanami-service",
  "izanami-server",
  "izanami-util",
]
