[package]
name = "izanami"
description = "An HTTP server built on hyper."
version = "0.2.0-dev"
publish = false
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ubnt-intrepid/izanami.git"
readme = "README.md"

include = [
  "/Cargo.toml",
  "/src/**/*.rs",
  "/tests/**/*.rs",
]

[dependencies]
bytes = { version = "0.4", features = ["either"] }
cookie = { version = "0.12", features = ["percent-encode"] }
either = "1.5"
failure = "0.1.5"
futures = "0.1"
h2 = "0.1"
http = "0.1"
httpdate = "0.3"
hyper = "0.12"
log = "0.4"
tokio = { version = "0.1.15", features = ["sync"] }
tokio-buf = "0.1"
tokio-executor = "0.1"
tokio-threadpool = "0.1"
tokio-tungstenite = { version = "0.6", default-features = false }
tower-service = "0.2"
tungstenite = { version = "0.6", default-features = false }

[dev-dependencies]
failure = "0.1.3"
tempfile = "3"
tokio-rustls = "0.9"
trust-dns-resolver = "0.10"
unicase = "2.4"
version-sync = "0.7"

[workspace]
members = [
  ".",
  "xtask",
]
