[package]
name = "izanami-buf"
version = "0.1.0-preview.1"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
bytes = "0.4"
either = { version = "1.5", optional = true }
futures = "0.1.25"

[features]
default = ["ext"]
ext = ["bytes/either", "either"]
