[package]
name = "izanami-buf"
description = "Components that abstracts asynchronous stream of bytes."
version = "0.1.0-preview.1"
edition = "2018"
publish = false
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ubnt-intrepid/izanami.git"

[dependencies]
bytes = "0.4"
futures = "0.1.25"
