[package]
name = "izanami-h2"
version = "0.1.0"
publish = false
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
edition = "2018"

[dependencies]
izanami = { version = "0.2.0-dev", path = "../izanami" }
bytes = "0.4"
futures = "0.3"
h2 = "0.2.0-alpha.3"
http = "0.1"
tokio = "0.2.0-alpha.6"
tracing = "0.1"
