[package]
name = "izanami-http"
description = "HTTP-specific abstraction for izanami."
version = "0.1.0-preview.1"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ubnt-intrepid/izanami.git"

[features]
default = ["serde_json"]

[dependencies]
bytes = "0.4"
futures = "0.1"
http = "0.1"
izanami-service = { version = "0.1.0-preview.2", path = "../izanami-service" }
izanami-util = { version = "0.1.0-preview.2", path = "../izanami-util" }
tokio-buf = "0.1"
tokio-io = "0.1"

serde_json = { version = "1", optional = true }

[dev-dependencies]
version-sync = "0.7"
