[package]
name = "izanami-net"
description = "Network abstraction for izanami."
version = "0.1.0-preview.1"
edition = "2018"
publish = false
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ubnt-intrepid/izanami.git"

[dependencies]
izanami-util = { version = "0.1.0-preview.1", path = "../izanami-util" }
futures = "0.1"
log = "0.4"

[dependencies.tokio]
version = "0.1"
default-features = false
features = ["io", "reactor", "tcp", "timer", "uds"]

[dev-dependencies]
version-sync = "0.7"
tokio = "0.1" # with default features
