[package]
name = "izanami-openssl"
version = "0.1.0"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
edition = "2018"

[dependencies]
izanami = { version = "0.1.0-preview.1", path = ".." }
openssl = "0.10"
tokio-openssl = "0.3"

[dev-dependencies]
failure = "0.1"
futures = "0.1"
http = "0.1"
version-sync = "0.7"
