[package]
name = "izanami-rt"
description = """
Miscellaneous primitives and re-exports for building asynchronous tasks.
"""
version = "0.1.0-preview.1"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/ubnt-intrepid/izanami.git"

[dependencies]
futures = "0.1"
tokio = "0.1"
tokio-threadpool = "0.1"

[dev-dependencies]
version-sync = "0.6"
