[package]
name = "izanami-rt"
description = "The abstraction of Tokio runtimes."
version = "0.1.0-preview.1"
edition = "2018"
publish = false
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ubnt-intrepid/izanami.git"

[dependencies]
futures = "0.1.25"
tokio = "0.1"
tokio-threadpool = "0.1"

[dev-dependencies]
version-sync = "0.7"
