[package]
name = "izanami-test"
version = "0.1.0-preview.1"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ubnt-intrepid/izanami.git"
description = "The basic utility for testing HTTP services."
publish = false

[dependencies]
izanami-service = { version = "0.1.0-preview.1", path = "../izanami-service" }
izanami-util = { version = "0.1.0-preview.1", path = "../izanami-util" }

bytes = "0.4"
cookie = { version = "0.11", features = ["percent-encode"] }
failure = "0.1.3"
futures = "0.1"
http = "0.1"
tokio = "0.1"

[dev-dependencies]
version-sync = "0.7"
