[package]
name = "izanami-util"
description = "Miscellaneous primitives for izanami."
version = "0.1.0-preview.1"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ubnt-intrepid/izanami.git"

[dependencies]
# empty

[dev-dependencies]
version-sync = "0.7"
