[package]
name = "izanami"
description = "An HTTP server built on hyper."
version = "0.2.0-dev"
publish = false
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ubnt-intrepid/izanami.git"
readme = "README.md"

[dependencies]
async-trait = "0.1"
bytes = "0.4"
http = "0.1"

[dev-dependencies]
version-sync = "0.8"
