[package]
name = "echo-service"
version = "0.0.0"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[dependencies]
izanami-service = "0.1.0-preview.1"
bytes = "0.4"
failure = "0.1.3"
futures = "0.1"
http = "0.1"
indexmap = "1"
regex = "1"

[dev-dependencies]
izanami = "0.1.0-preview.1"
