[package]
name = "example-native-tls-server"
version = "0.0.0"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "example_native_tls_server"
path = "src/main.rs"
doc = false

[dependencies]
izanami = { version = "0.1.0-preview.1", features = ["use-native-tls"] }
failure = "0.1.3"
native-tls = "0.2"

echo-service = { path = "../echo-service" }
http = "0.1"
