[package]
name = "example-native-tls-server"
version = "0.0.0"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "example_native_tls_server"
path = "src/main.rs"
doc = false

[dependencies]
izanami = { path = "../.." }
failure = "0.1.3"
futures = "0.1"
http = "0.1"
native-tls = "0.2"
tokio-tls = "0.2"
