[package]
name = "example-openssl-server"
version = "0.0.0"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "example_openssl_server"
path = "src/main.rs"
doc = false

[dependencies]
izanami = { version = "0.1.0-preview.1", features = ["use-openssl"] }
openssl = "0.10"

echo-service = { path = "../echo-service" }
http = "0.1"
