[package]
name = "example-openssl-server"
version = "0.0.0"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "example_openssl_server"
path = "src/main.rs"
doc = false

[dependencies]
izanami = { path = "../.." }
failure = "0.1"
futures = "0.1"
http = "0.1"
openssl = "0.10"
tokio-openssl = "0.3"
