[package]
name = "example-rustls-server"
version = "0.0.0"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "example_rustls_server"
path = "src/main.rs"
doc = false

[dependencies]
izanami = { path = "../.." }
failure = "0.1.3"
futures = "0.1"
http = "0.1"
tokio-rustls = "0.8"
