[package]
name = "example-simple_server"
version = "0.0.0"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "example_simple_server"
path = "src/main.rs"
doc = false

[dependencies]
izanami = "0.1.0-preview.1"
echo-service = { path = "../echo-service" }
http = "0.1"
