[package]
name = "example-tcp-server"
version = "0.0.0"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "example_tcp_server"
path = "src/main.rs"
doc = false

[dependencies]
izanami = { path = "../.." }
echo-service = { path = "../echo-service" }
http = "0.1"
tokio = "0.1"
